[gd_scene load_steps=11 format=3 uid="uid://bc3toqqlornsn"]

[ext_resource type="Texture2D" uid="uid://djsl02gircyln" path="res://assets/ui/windows/border_rect.png" id="1_ogpco"]
[ext_resource type="Script" uid="uid://bgeudt78cnqt7" path="res://apps/email_app/email_app.gd" id="1_uevvc"]
[ext_resource type="Script" uid="uid://crcryufm2fdv3" path="res://apps/email_app/email_stats/email_stat.gd" id="2_87hw0"]
[ext_resource type="Theme" uid="uid://cuqmn3lhjdfe5" path="res://assets/themes/os_95.tres" id="2_uevvc"]
[ext_resource type="Resource" uid="uid://dp75kk4648ri3" path="res://apps/email_app/email_stats/good_ending_email.tres" id="3_thqnb"]
[ext_resource type="Resource" uid="uid://186hcmbndb6f" path="res://apps/email_app/email_stats/bad_ending_email.tres" id="4_f32cr"]
[ext_resource type="PackedScene" uid="uid://cnefoa4kavpov" path="res://apps/email_app/email_details.tscn" id="4_uevvc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ea1u6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87hw0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thqnb"]
bg_color = Color(1, 1, 1, 1)

[node name="EmailApp" type="Control"]
layout_mode = 3
anchor_right = 0.445
anchor_bottom = 1.0
offset_right = -0.600037
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uevvc")
email_stats = Array[ExtResource("2_87hw0")]([ExtResource("3_thqnb"), ExtResource("4_f32cr")])

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.967
anchor_bottom = 0.736
offset_right = -0.223022
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_ea1u6")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_87hw0")

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("1_ogpco")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
clip_children = 1
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_thqnb")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_uevvc")
horizontal_scroll_mode = 0

[node name="EmailList" type="VBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="EmailDetails" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer/PanelContainer/ScrollContainer" instance=ExtResource("4_uevvc")]
unique_name_in_owner = true
visible = false
layout_mode = 2
